manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cvcliqueretireapi
  namespace: back-end
spec:
  selector:
    matchLabels:
      app: cvcliqueretireapi
  template:
    metadata:
      labels:
        app: cvcliqueretireapi
    spec:
      containers:
        - name: cvcliqueretireapi
          image: devopsdockeraraujo.azurecr.io/cvcliqueretireapi:dev
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
              requests:
                memory: "256Mi"
                cpu: "300m"
              limits:
                memory: "512Mi"
                cpu: "500m"   
          imagePullPolicy: Always
      imagePullSecrets:
          - name: acr-secret
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: cvcliqueretireapi-service
  namespace: back-end
spec:
  selector:
    app: cvcliqueretireapi
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cvcliqueretireapi-ingressroute
  namespace: back-end
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`cv-cliqueretireapi.dev.araujo.com.br`)
      kind: Rule
      services:
      - name: cvcliqueretireapi-service
        port: 80
